# cafe-screensaver

./: .build.yml  .travis.yml  AUTHORS  NEWS  README  autogen.sh  cafe-screensaver.pot  configure.ac  index.html  makepot  mate-screensaver.pot
.tx/: config
2023-12-20-084753-53368-1@39529cfca147_devel/: index.html  report-069bf4.html  report-0bc662.html  report-19ddc6.html  report-2084b3.html  report-24761d.html  report-280353.html  report-2dd8bc.html  report-5126cf.html  report-534ad8.html  report-68e8c1.html  report-84bbe1.html  report-86b9eb.html  report-8cef00.html  report-9f99ab.html  report-ac5343.html  report-ba3e4e.html  report-be2741.html  report-c2b391.html  report-c380e7.html  report-d83039.html  report-e0169c.html  report-fa48d9.html  report-fc5910.html
2023-12-20-084850-4109-cppcheck@39529cfca147_devel/: index.html  output_39529cfca1477535a595a5d1c4f1f22fc3883f94
2023-12-20-085025-53367-1@0a99de4bfb16_devel/: index.html  report-069bf4.html  report-0bc662.html  report-19ddc6.html  report-2084b3.html  report-24761d.html  report-280353.html  report-2dd8bc.html  report-5126cf.html  report-534ad8.html  report-68e8c1.html  report-84bbe1.html  report-86b9eb.html  report-8cef00.html  report-9f99ab.html  report-ac5343.html  report-ba3e4e.html  report-be2741.html  report-c2b391.html  report-c380e7.html  report-d83039.html  report-e0169c.html  report-fa48d9.html  report-fc5910.html
2023-12-20-085123-0597-cppcheck@0a99de4bfb16_devel/: 1.html  19.html  output_0a99de4bfb166e57c18b4628cbb6c12ef01d9ad3
2023-12-20-085413-53367-1@442bde353613_devel/: index.html  report-069bf4.html  report-0bc662.html  report-19ddc6.html  report-2084b3.html  report-24761d.html  report-280353.html  report-2dd8bc.html  report-5126cf.html  report-534ad8.html  report-68e8c1.html  report-84bbe1.html  report-86b9eb.html  report-8cef00.html  report-9f99ab.html  report-ac5343.html  report-ba3e4e.html  report-be2741.html  report-c2b391.html  report-c380e7.html  report-d83039.html  report-e0169c.html  report-fa48d9.html  report-fc5910.html
2023-12-20-085510-8974-cppcheck@442bde353613_devel/: 15.html  output_442bde353613320d2bd5ea66a79f1bf5baeeb965
2023-12-20-095423-53370-1@30f9006e1de0_devel/: index.html  output_30f9006e1de026b91261d203ba345bb698ca2b45  report-069bf4.html  report-0bc662.html  report-19ddc6.html  report-2084b3.html  report-24761d.html  report-280353.html  report-2dd8bc.html  report-5126cf.html  report-534ad8.html  report-68e8c1.html  report-84bbe1.html  report-86b9eb.html  report-8cef00.html  report-9f99ab.html  report-ac5343.html  report-ba3e4e.html  report-be2741.html  report-c2b391.html  report-c380e7.html  report-d83039.html  report-e0169c.html  report-fa48d9.html  report-fc5910.html
2023-12-20-095523-5036-cppcheck@30f9006e1de0_devel/: 0.html  16.html  4.html
2023-12-20-101650-53368-1@e58b7352da31_devel/: index.html  output_e58b7352da311a75254f0485b3f5778f82adc575  report-069bf4.html  report-0bc662.html  report-19ddc6.html  report-2084b3.html  report-24761d.html  report-280353.html  report-2dd8bc.html  report-5126cf.html  report-534ad8.html  report-68e8c1.html  report-84bbe1.html  report-86b9eb.html  report-8cef00.html  report-9f99ab.html  report-ac5343.html  report-ba3e4e.html  report-be2741.html  report-c2b391.html  report-c380e7.html  report-d83039.html  report-e0169c.html  report-fa48d9.html  report-fc5910.html
2023-12-20-101701-53368-1@623077d4d7e6_devel/: index.html  report-069bf4.html  report-0bc662.html  report-19ddc6.html  report-2084b3.html  report-24761d.html  report-280353.html  report-2dd8bc.html  report-5126cf.html  report-534ad8.html  report-68e8c1.html  report-84bbe1.html  report-86b9eb.html  report-8cef00.html  report-9f99ab.html  report-ac5343.html  report-ba3e4e.html  report-be2741.html  report-c2b391.html  report-c380e7.html  report-d83039.html  report-e0169c.html  report-fa48d9.html  report-fc5910.html
2023-12-20-101748-1222-cppcheck@e58b7352da31_devel/: 2.html  22.html  3.html  5.html
2023-12-20-101801-2086-cppcheck@623077d4d7e6_devel/: 24.html  (+2 more)
data/: Makefile.am  cafe-screensaver-command.1  cafe-screensaver-preferences.1  cafe-screensaver-preferences.desktop.in  cafe-screensaver-preferences.ui  cafe-screensaver.1  cafe-screensavers.menu.in  lock-dialog-default.ui  mate-screensaver-command.1  mate-screensaver-preferences.1  mate-screensaver-preferences.desktop.in  mate-screensaver-preferences.ui  mate-screensaver.1  mate-screensaver.directory.desktop.in  mate-screensaver.pc.in  org.cafe.ScreenSaver.service.in  org.cafe.screensaver.gresource.xml  org.cafe.screensaver.gschema.xml.in  org.mate.screensaver.gresource.xml  org.mate.screensaver.gschema.xml.in  xscreensaver-config.xsl
data/images/: Makefile.am
data/images/space/: Makefile.am  space.xml.in.in
doc/: Makefile.am  dbus-interface.xml  mate-screensaver.xml.in
savers/: Makefile.am  floaters.c  footlogo-floaters.desktop.in.in  gnomelogo-floaters.desktop.in.in  gs-theme-engine.c  gs-theme-engine.h  gs-theme-window.c  gs-theme-window.h  gste-popsquares.c  gste-slide.c  gste-slide.h  gste-slideshow.c  gste-squares.c  gste-squares.h  personal-slide.desktop.in.in  personal-slideshow.desktop.in.in  popsquares.c  slide.c  slideshow.c  space-slide.desktop.in.in  space-slideshow.desktop.in.in  squares.c  squares.desktop.in.in
src/: Makefile.am  cafe-screensaver-command.c  cafe-screensaver-dialog.c  cafe-screensaver-gl-helper.c  cafe-screensaver-preferences.c  cafe-screensaver.c  cafe-screensaver.desktop.in.in  copy-theme-dialog.c  copy-theme-dialog.h  debug-screensaver.sh  gs-auth-bsdauth.c  gs-auth-helper.c  gs-auth-pam.c  gs-debug.c  gs-fade.c  gs-grab-x11.c  gs-grab.h  gs-job.c  gs-job.h  gs-listener-dbus.c  gs-lock-plug.c  gs-lock-plug.h  gs-manager.c  gs-monitor.c  gs-prefs.c  gs-theme-manager.c  gs-visual-gl.c  gs-visual-gl.h  gs-watcher-x11.c  gs-window-x11.c  gs-window.h  mate-screensaver-command.c  mate-screensaver-dialog.c  mate-screensaver-gl-helper.c  mate-screensaver-preferences.c  mate-screensaver.c  mate-screensaver.desktop.in.in  mate-screensaver.h  test-fade.c  test-passwd.c  (+2 more)
(+726 files in other folders)
